# AutoExpress

./: .dockerignore  .env.local.example  .gitignore  .hintrc  Changelog.md  Dockerfile  LICENSE  README.md  RELEASE_README.md  install.bat  install.sh  pyproject.toml  requirements.txt  run.bat  run.sh  run_debug.bat  run_debug.sh  startup.bat  startupDebug.bat
.github/workflows/: linux-release.yml  python-app.yml  release.yml  windows-release.yml
auto-express/: README.md  next.config.ts  openapi.json  package.json  pnpm-lock.yaml  tailwind.config.ts
auto-express/app/: globals.css  layout.tsx  page.tsx
auto-express/components/: app-sidebar.tsx  auto-express-app.tsx  drop-zone-inputs-panel.tsx  drop-zone-panel.tsx  image-carousel.tsx  nav-main.tsx  parameters-panel.tsx  responsive-debug-panel.tsx  responsive-provider.tsx  theme-editor.tsx
auto-express/hooks/: use-mobile.ts  use-webui-api.ts
autoexpress/: __init__.py  create_grid.py  views.py
autoexpress/modules/: a1111_api.py  a1111_client.py  background_remover.py  expression_generator.py  generate.py  image_parser.py  json_handler.py  logger.py  utils.py
autoexpress/resources/: clip_expressions.json  empty_bg.json  expressions.json  expressions.json.bak  illu_expressions.json  payload.json
autoexpress/templates/: background_remover.html  index.html
src/: app.py  batch_bg_remover_gui.py  payload_manager_gui.py
src/gui/: dragdropwidget.py  inputwidget.py
src/modules/: Background_Remover.py  Image_Parser.py  SD_Api_Handler.py  __init__.py  a1111_api.py  json_handler.py  logger.py  payload.json
src/resources/: clip_expressions.json  empty_bg.json  expressions.json  payload.json
src/static/: main.css  main.js
src/templates/: index.html
test/: test.py
(+75 files in other folders)
