[project]
name = "autoexpress"
version = "0.1.0"
description = "A Flask application for automated expression image generation using Stable Diffussion API."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "attrs==23.1.0",
    "blinker==1.8.2",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "darkdetect==0.8.0",
    "docutils==0.20.1",
    "Flask==3.0.3",
    "flatbuffers==23.5.26",
    "humanfriendly==10.0",
    "idna==3.7",
    "imageio==2.33.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "jsonschema==4.20.0",
    "jsonschema-specifications==2023.12.1",
    "kivy-deps.angle==0.3.3",
    "kivy-deps.glew==0.3.1",
    "kivy-deps.sdl2==0.6.0",
    "Kivy-Garden==0.1.5",
    "lazy_loader==0.3",
    "llvmlite==0.41.1",
    "MarkupSafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numba==0.58.1",
    "numpy==1.26.2",
    "onnxruntime==1.16.3",
    "opencv-python-headless==4.8.1.78",
    "packaging==23.2",
    "Pillow==10.3.0",
    "platformdirs==4.1.0",
    "pooch==1.8.0",
    "protobuf==4.25.1",
    "Pygments==2.17.2",
    "PyMatting==1.1.12",
    "pyreadline3==3.4.1",
    "pywin32==306",
    "referencing==0.32.0",
    "rembg==2.0.53",
    "requests==2.32.2",
    "rpds-py==0.16.2",
    "scikit-image==0.22.0",
    "scipy==1.11.4",
    "sd-parsers==0.3rc2",
    "sympy==1.12",
    "termcolor==2.4.0",
    "tifffile==2023.12.9",
    "tqdm==4.66.1",
    "urllib3==2.1.0",
    "Werkzeug==3.0.3"
]

[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"